--- a/css/defaultStyle.css
+++ b/css/defaultStyle.css
@@ -1,6 +1,5 @@
 body {
-	background-image: url("../gfx/bg.png");
-	background-repeat: repeat;
+	background-color: black;
 	margin: 0;
 }
 
@@ -11,7 +10,7 @@ body {
 }
 
 #console {
-    width: 654px;
+    width: 100%;
     height: 1.5em;
     background-color: white;
     border: 1px solid black;
@@ -22,6 +21,8 @@ body {
     width: 668px;
     height: 494px;
 	overflow: hidden;
+    background-image: url("../gfx/bg.png");
+    background-repeat: repeat;
 }
 
 .clickable-button {
@@ -43,6 +44,10 @@ body {
     padding: 0em 1em;
 }
 
+#gui {
+    width: 100%;
+}
+
 #gui * {
 	vertical-align: top;
 }
@@ -58,7 +63,8 @@ body {
 }
 
 #rupeeIcon {
-    height: 32px;
+    height: 24px;
+    margin: 3px;
 }
 #heartWrapperWrapper {
     display: inline-block;
@@ -74,4 +80,13 @@ body {
 
 .controls {
     display: inline-block;
+}
+
+#overlay-touch {
+    width: 100%;
+    height: 520px;
+    position: absolute;
+    opacity: 0.1;
+    font-size: 99em;
+    z-index: 1;
 }
